# kokoro-fr-tts

./: .gitignore  Dockerfile  README.md  app.py  audio_player.py  pyproject.toml  test.html  test.sh  tts_engine.py
.github/workflows/: ci.yml
tests/: test_api.py  test_pronunciation.py
